Previous replaced with Last and One Expenses ViewModel for everything

--- a/ExpensesWriter/ExpensesWriter/Views/CurrentMonthExpensesPage.xaml
+++ b/ExpensesWriter/ExpensesWriter/Views/CurrentMonthExpensesPage.xaml
@@ -40,7 +40,7 @@
                 ItemsSource="{Binding Expenses}"
                 VerticalOptions="FillAndExpand"
                 HasUnevenRows="true"
-                RefreshCommand="{Binding LoadCurrentMonthExpensesCommand}"
+                RefreshCommand="{Binding LoadExpensesCommand}"
                 IsPullToRefreshEnabled="true"
                 IsRefreshing="{Binding IsBusy, Mode=OneWay}"
                 CachingStrategy="RecycleElement"
