--- a/ExpensesWriter/ExpensesWriter/Views/LastMonthExpensesPage.xaml
+++ b/ExpensesWriter/ExpensesWriter/Views/LastMonthExpensesPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="ExpensesWriter.Views.FamilyPreviousMonthExpensesPage">
+             x:Class="ExpensesWriter.Views.LastMonthExpensesPage">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Send" Command="{Binding EmailExpensesCommand}"/>
     </ContentPage.ToolbarItems>
@@ -21,7 +21,7 @@
                 ItemsSource="{Binding Expenses}"
                 VerticalOptions="FillAndExpand"
                 HasUnevenRows="true"
-                RefreshCommand="{Binding LoadMonthExpensesCommand}"
+                RefreshCommand="{Binding LoadExpensesCommand}"
                 IsPullToRefreshEnabled="true"
                 IsRefreshing="{Binding IsBusy, Mode=OneWay}"
                 CachingStrategy="RecycleElement"
