--- a/ExpensesWriter/ExpensesWriter/Views/LastMonthResultsPage.xaml
+++ b/ExpensesWriter/ExpensesWriter/Views/LastMonthResultsPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="ExpensesWriter.Views.PreviousMonthResultsPage">
+             x:Class="ExpensesWriter.Views.LastMonthResultsPage">
     <ContentPage.Content>
         <StackLayout>
             <StackLayout Orientation="Horizontal">
