--- a/ExpensesWriter/ExpensesWriter/Views/CurrentMonthExpensesPage.xaml
+++ b/ExpensesWriter/ExpensesWriter/Views/CurrentMonthExpensesPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:contentViews ="clr-namespace:ExpensesWriter.Views.ContentViews"
              mc:Ignorable="d"
              x:Class="ExpensesWriter.Views.CurrentMonthExpensesPage"
              Title="{Binding Title}"
@@ -36,46 +37,7 @@
                        Text="" 
                        Keyboard="Text"/>
         </Grid>
-        <ListView x:Name="ExpensesListView"
-                ItemsSource="{Binding Expenses}"
-                VerticalOptions="FillAndExpand"
-                HasUnevenRows="true"
-                RefreshCommand="{Binding LoadExpensesCommand}"
-                IsPullToRefreshEnabled="true"
-                IsRefreshing="{Binding IsBusy, Mode=OneWay}"
-                CachingStrategy="RecycleElement"
-                ItemSelected="OnExpenseSelected" >
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <Grid Padding="10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="55"/>
-                                <ColumnDefinition Width="100"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Text="{Binding Money}" 
-                                d:Text="{Binding .}"
-                                LineBreakMode="NoWrap" 
-                                Style="{DynamicResource ListExpenseTextStyle}" 
-                                FontSize="16" />
-                            <Label Grid.Column="1"
-                                Text="{Binding Category}" 
-                                d:Text="Expense descripton"
-                                LineBreakMode="NoWrap"
-                                Style="{DynamicResource ListExpenseDetailTextStyle}"
-                                FontSize="13" />
-                            <Label Grid.Column="2"
-                                Text="{Binding Name}" 
-                                d:Text="Expense descripton"
-                                LineBreakMode="NoWrap"
-                                Style="{DynamicResource ListExpenseDetailTextStyle}"
-                                FontSize="13" />
-                        </Grid>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+        <contentViews:ExpensesView/>
 
     </StackLayout>
 
