--- a/ExpensesWriter/ExpensesWriter/Views/LastMonthExpensesPage.xaml
+++ b/ExpensesWriter/ExpensesWriter/Views/LastMonthExpensesPage.xaml
@@ -3,60 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:contentViews ="clr-namespace:ExpensesWriter.Views.ContentViews"
              mc:Ignorable="d"
              x:Class="ExpensesWriter.Views.LastMonthExpensesPage">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Send" Command="{Binding EmailExpensesCommand}"/>
     </ContentPage.ToolbarItems>
+    <contentViews:ExpensesView/>
 
-    <StackLayout Padding="20">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="55"/>
-                <ColumnDefinition Width="100"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-        </Grid>
-        <ListView x:Name="ExpensesListView"
-                ItemsSource="{Binding Expenses}"
-                VerticalOptions="FillAndExpand"
-                HasUnevenRows="true"
-                RefreshCommand="{Binding LoadExpensesCommand}"
-                IsPullToRefreshEnabled="true"
-                IsRefreshing="{Binding IsBusy, Mode=OneWay}"
-                CachingStrategy="RecycleElement"
-                >
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <Grid Padding="10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="55"/>
-                                <ColumnDefinition Width="100"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Text="{Binding Money}" 
-                                d:Text="{Binding .}"
-                                LineBreakMode="NoWrap" 
-                                Style="{DynamicResource ListExpenseTextStyle}" 
-                                FontSize="16" />
-                            <Label Grid.Column="1"
-                                Text="{Binding Category}" 
-                                d:Text="Expense descripton"
-                                LineBreakMode="NoWrap"
-                                Style="{DynamicResource ListExpenseDetailTextStyle}"
-                                FontSize="13" />
-                            <Label Grid.Column="2"
-                                Text="{Binding Name}" 
-                                d:Text="Expense descripton"
-                                LineBreakMode="NoWrap"
-                                Style="{DynamicResource ListExpenseDetailTextStyle}"
-                                FontSize="13" />
-                        </Grid>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-
-    </StackLayout>
 </ContentPage>
