--- a/ExpensesWriter/ExpensesWriter/Views/CurrentMonthResultsPage.xaml
+++ b/ExpensesWriter/ExpensesWriter/Views/CurrentMonthResultsPage.xaml
@@ -6,6 +6,6 @@
              xmlns:contentViews="clr-namespace:ExpensesWriter.Views.ContentViews"
              mc:Ignorable="d"
              Title="{Binding Title}"
-             x:Class="ExpensesWriter.Views.MonthResultsPage">
+             x:Class="ExpensesWriter.Views.CurrentMonthResultsPage">
     <contentViews:MonthResultsView/>
 </ContentPage>
