User can remove item from CurrentMonthExpenses page

--- a/ExpensesWriter/ExpensesWriter/Views/ContentViews/ExpensesView.xaml
+++ b/ExpensesWriter/ExpensesWriter/Views/ContentViews/ExpensesView.xaml
@@ -26,6 +26,9 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
+                            <ViewCell.ContextActions>
+                                <MenuItem Command="{Binding DeleteExpensesCommand}" Clicked="OnDelete" CommandParameter="{Binding .}" Text="Delete" IsDestructive="True"/>
+                            </ViewCell.ContextActions>
                             <Grid Padding="10">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="55"/>
