--- a/ExpensesWriter/ExpensesWriter/Views/MainPage.xaml
+++ b/ExpensesWriter/ExpensesWriter/Views/MainPage.xaml
@@ -20,6 +20,7 @@
             </NavigationPage.Icon>
             <x:Arguments>
                 <views:PersonalCurrentMonthExpensesPage />
+                <!--<views:FamilyAllExpensesPage />-->
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
