--- a/ExpensesWriter/ExpensesWriter/Views/AboutPage.xaml
+++ b/ExpensesWriter/ExpensesWriter/Views/AboutPage.xaml
@@ -74,6 +74,9 @@
                         Command="{Binding OpenWebCommand}"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
+                <Label Text="{Binding IpAddress}" LineBreakMode="WordWrap" >
+
+                </Label>
             </StackLayout>
         </ScrollView>
     </Grid>
