--- a/ExpensesWriter/ExpensesWriter/Views/ContentViews/MonthResultsView.xaml
+++ b/ExpensesWriter/ExpensesWriter/Views/ContentViews/MonthResultsView.xaml
@@ -12,23 +12,31 @@
         </ResourceDictionary>
     </ContentView.Resources>
     <ContentView.Content>
-        <StackLayout>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
-                <Label Text="Total Planned:"/>
-                <Label Text="{Binding TotalPlannedMoney}"/>
+        <StackLayout >
+            <StackLayout Orientation="Horizontal">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+                    <Label Text="Total Planned:"/>
+                    <Label Text="{Binding TotalPlannedMoney}"/>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+                    <Label Text="Total Spent:"/>
+                    <Label Text="{Binding TotalMoney}"/>
+                </StackLayout>
             </StackLayout>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
-                <Label Text="Total Fact:"/>
-                <Label Text="{Binding TotalMoney}"/>
+            <StackLayout Orientation="Horizontal">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+                    <Label Text="Total Left:"/>
+                    <Label Text="{Binding TotalLeft}"/>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+                    <Label Text="Percent:"/>
+                    <Label Text="{Binding PercentOfExecution}"/>
+                </StackLayout>
             </StackLayout>
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
-                <Label Text="Percent:"/>
-                <Label Text="{Binding PercentOfExecution}"/>
-            </StackLayout>
-
             <Grid Padding="10">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
@@ -51,6 +59,12 @@
                         Style="{DynamicResource ListExpenseDetailTextStyle}"
                         FontSize="13" HorizontalTextAlignment="End"/>
                 <Label Grid.Column="3"
+                        Text="Left" 
+                        d:Text="Expense descripton"
+                        LineBreakMode="NoWrap"
+                        Style="{DynamicResource ListExpenseDetailTextStyle}"
+                        FontSize="13" HorizontalTextAlignment="End"/>
+                <Label Grid.Column="4"
                         Text="Percent" 
                         d:Text="Expense descripton"
                         LineBreakMode="NoWrap"
@@ -76,6 +90,7 @@
                                     <ColumnDefinition Width="1*"/>
                                     <ColumnDefinition Width="1*"/>
                                     <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="1*"/>
                                 </Grid.ColumnDefinitions>
                                 <Label Text="{Binding Category}"
                                 d:Text="{Binding .}"
@@ -95,6 +110,12 @@
                                 Style="{DynamicResource ListExpenseDetailTextStyle}"
                                 FontSize="13"  HorizontalTextAlignment="End"/>
                                 <Label Grid.Column="3"
+                                Text="{Binding LeftMoney}" 
+                                d:Text="Expense descripton"
+                                LineBreakMode="NoWrap"
+                                Style="{DynamicResource ListExpenseDetailTextStyle}"
+                                FontSize="13"  HorizontalTextAlignment="End"/>
+                                <Label Grid.Column="4"
                                 Text="{Binding PercentOfExecution}" 
                                 d:Text="Expense descripton"
                                 LineBreakMode="NoWrap"
